--- a/trunk/Neptuo.WebSite/Views/Content/Hello.cshtml
+++ b/trunk/Neptuo.WebSite/Views/Content/Hello.cshtml
@@ -5,7 +5,7 @@
 <h2>Hello!</h2>
 
 <div class="col-md-6">
-    <div class="folder">
+    <div class="folder lang-cs">
         <h2 class="folder-heading">404 - Nenalezeno!</h2>
 
         <p class="first">
@@ -26,7 +26,7 @@
 </div>
 
 <div class="col-md-6">
-    <div class="folder">
+    <div class="folder lang-en">
         <h2 class="folder-heading">404 - Not found!</h2>
 
         <p class="first">
@@ -56,7 +56,7 @@
 </div>
 
 <div class="col-md-6">
-    <div class="folder">
+    <div class="folder lang-cs">
         <h2 class="folder-heading">404 - Nenalezeno!</h2>
 
         <p class="first">
@@ -77,7 +77,7 @@
 </div>
 
 <div class="col-md-6">
-    <div class="folder">
+    <div class="folder lang-en">
         <h2 class="folder-heading">404 - Not found!</h2>
 
         <p class="first">
@@ -98,7 +98,7 @@
 </div>
 
 <div class="col-md-6">
-    <div class="folder">
+    <div class="folder lang-cs">
         <h2 class="folder-heading">404 - Nenalezeno!</h2>
 
         <p class="first">
@@ -119,7 +119,7 @@
 </div>
 
 <div class="col-md-6">
-    <div class="folder">
+    <div class="folder lang-en">
         <h2 class="folder-heading">404 - Not found!</h2>
 
         <p class="first">
@@ -140,7 +140,7 @@
 </div>
 
 <div class="col-md-6">
-    <div class="folder">
+    <div class="folder lang-cs">
         <h2 class="folder-heading">404 - Nenalezeno!</h2>
 
         <p class="first">
@@ -161,7 +161,7 @@
 </div>
 
 <div class="col-md-6">
-    <div class="folder">
+    <div class="folder lang-en">
         <h2 class="folder-heading">404 - Not found!</h2>
 
         <p class="first">
