--- a/trunk/Neptuo.WebSite/Views/Content/NotFound.cshtml
+++ b/trunk/Neptuo.WebSite/Views/Content/NotFound.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="col-md-6">
-    <div class="folder">
+    <div class="folder lang-cs">
         <h2 class="folder-heading">404 - Nenalezeno!</h2>
 
         <p class="first">
@@ -24,7 +24,7 @@
 </div>
 
 <div class="col-md-6">
-    <div class="folder">
+    <div class="folder lang-en">
         <h2 class="folder-heading">404 - Not found!</h2>
 
         <p class="first">
