--- a/trunk/Neptuo.WebSite/Views/Shared/_Layout.cshtml
+++ b/trunk/Neptuo.WebSite/Views/Shared/_Layout.cshtml
@@ -14,33 +14,53 @@
 
         <nav class="navbar navbar-fixed-top" role="navigation">
             <div class="container">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="/hello">
                     <img src="Content/Images/Logo.png" alt="Neptuo logo" height="80" />
                 </a>
                 <ul>
-                    <li>
-                        <a href="/hello">Hello!</a>
+                    <li class="disabled">
+                        <a href="~/projects">
+                            Projects
+                            <span class="glyphicon glyphicon-play"></span>
+                        </a>
+                    </li>
+                    <li class="disabled">
+                        <a href="~/webs">
+                            Webs
+                            <span class="glyphicon glyphicon-globe"></span>
+                        </a>
+                    </li>
+                    <li class="disabled">
+                        <a href="~/work">
+                            Work
+                            <span class="glyphicon glyphicon-usd"></span>
+                        </a>
                     </li>
                     <li>
-                        <a href="/projects">Projects</a>
-                    </li>
-                    <li>
-                        <a href="/webs">Webs</a>
-                    </li>
-                    <li>
-                        <a href="/work">Work</a>
-                    </li>
-                    <li>
-                        <a href="/me">Me</a>
+                        <a href="~/me">
+                            Me
+                            <span class="glyphicon glyphicon-user"></span>
+                        </a>
                     </li>
                 </ul>
             </div>
         </nav>
 
         <div class="body container">
+            <form>
+                <input type="radio" name="lang" id="lang-cs" value="cs" checked="checked" />
+                <input type="radio" name="lang" id="lang-en" value="en" />
+                
+                <div class="lang navbar-fixed-top">
+                    <div>
+                        <label for="lang-cs">Česky</label>
+                        <label for="lang-en">English</label>
+                    </div>
+                </div>
 
-            @RenderBody()
+                @RenderBody()
 
+            </form>
         </div>
 
         <div class="foot">
