--- a/trunk/Neptuo.WebSite/Views/Shared/_Layout.cshtml
+++ b/trunk/Neptuo.WebSite/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
 
         <nav class="navbar navbar-fixed-top" role="navigation">
             <div class="container">
-                <a class="navbar-brand" href="/hello">
+                <a class="navbar-brand  @(Request.AppRelativeCurrentExecutionFilePath == "~/" ? "active" : null)" href="~/">
                     <img src="Content/Images/Logo.png" alt="Neptuo logo" height="80" />
                 </a>
                 <ul>
@@ -24,7 +24,7 @@
                             <span class="glyphicon glyphicon-play"></span>
                         </a>
                     </li>
-                    <li class="disabled">
+                    <li class="@(Request.AppRelativeCurrentExecutionFilePath == "~/webs" ? "active" : null)">
                         <a href="~/webs">
                             Webs
                             <span class="glyphicon glyphicon-globe"></span>
@@ -36,7 +36,7 @@
                             <span class="glyphicon glyphicon-usd"></span>
                         </a>
                     </li>
-                    <li>
+                    <li class="@(Request.AppRelativeCurrentExecutionFilePath == "~/me" ? "active" : null)">
                         <a href="~/me">
                             Me
                             <span class="glyphicon glyphicon-user"></span>
