--- a/Neptuo.WebSite/Content/design.css
+++ b/Neptuo.WebSite/Content/design.css
@@ -27,7 +27,7 @@
     color: white;
 }
 
-.navbar a:hover, .navbar a:focus {
+.navbar a:hover, .navbar a:focus, .navbar li.active a, .navbar a.active {
     background: #157FCC;
 }
 
@@ -135,6 +135,19 @@
     background: white url('http://forms.neptuo.com/Design/Images/Langs/en.png') no-repeat -8px -8px;
 }
 
+.folder .folder-heading a {
+    float: right;
+}
+
+.folder .folder-heading a[href^="http://"]:after {
+    content: "\e164";
+    font-family: 'Glyphicons Halflings';
+    padding-left: 5px;
+    font-size: 60%;
+    opacity: 0.4;
+    color: black;
+}
+
 
 
 
@@ -170,7 +183,7 @@
 
 
 .lang {
-    margin: 80px 0 0 20px;
+    margin: 81px 0 0 20px;
 }
 
 .lang div {
@@ -186,6 +199,7 @@
 .lang div label {
     margin: 0;
     font-weight: normal;
+    cursor: pointer;
 }
 
 #lang-cs, #lang-en {
@@ -198,4 +212,19 @@
 
 #lang-cs:checked ~ * label[for=lang-cs], #lang-en:checked ~ * label[for=lang-en] {
     color: red;
+}
+
+
+
+
+
+.image-left {
+    float: left;
+    margin: 10px 0 10px 10px;
+    background: url('http://www.votocvohoz.cz/assets/default/loading16.gif') no-repeat center center;
+}
+.image-right {
+    float: left;
+    margin: 10px 10px 10px 0px;
+    background: url('http://www.votocvohoz.cz/assets/default/loading16.gif') no-repeat center center;
 }
