--- a/Neptuo.WebSite/Views/Content/Webs.cshtml
+++ b/Neptuo.WebSite/Views/Content/Webs.cshtml
@@ -1,18 +1,60 @@
-﻿@{
+﻿@model IEnumerable<Neptuo.WebSite.Models.Webs.WebModel>
+@{
     ViewBag.Title = "Not found!";
 }
 
-<ul class="nav nav-tabs">
-  <li class="active"><a href="#"><img src="http://is4wfw.neptuo.com/file.php?rid=35" title="HotProject" width="127" height="90" /></a></li>
-  <li><a href="#"><img src="http://is4wfw.neptuo.com/file.php?rid=34" title="AMS s.r.o." width="127" height="90" /></a></li>
-  <li><a href="#">Messages</a></li>
-</ul>
-
-<div class="folder left">
-    <img src="http://is4wfw.neptuo.com/file.php?rid=35" title="HotProject" width="127" height="90" />
+@foreach (var web in Model)
+{
+<div class="folder">
+    <h2 class="folder-heading">
+        @web.Title
+        @if (!String.IsNullOrEmpty(web.Link)) 
+        { 
+        <a target="_blank" href="@web.Link">@web.LinkName</a>
+        }
+    </h2>
+    @if (!String.IsNullOrEmpty(web.PreviewLink)) 
+    { 
+    <div class="image-left">
+        <img src="@web.PreviewLink" title="@web.Title" width="127" height="90" />
+    </div>
+    }
+    <div class="col-md-5 lang-cs">
+        <ul>
+            @foreach (var description in web.Descriptions)
+            {
+                if (!String.IsNullOrEmpty(description.Cs)) 
+                { 
+                <li>@description.Cs</li>
+                }
+            }
+        </ul>
+    </div>
+    <div class="col-md-5 lang-en">
+        <ul>
+            @foreach (var description in web.Descriptions)
+            {
+                if (!String.IsNullOrEmpty(description.En)) 
+                { 
+                <li>@description.En</li>
+                }
+            }
+        </ul>
+    </div>
     <div class="clear"></div>
 </div>
-<div class="folder left">
-    <img src="http://is4wfw.neptuo.com/file.php?rid=34" title="AMS s.r.o." width="127" height="90" />
+}
+<div class="folder">
+    <h2 class="folder-heading">
+        <span class="lang-cs">A několik starších projektů</span>
+        <span class="lang-en right">And some older projects</span>
+    </h2>
+    
+    <img class="image-left" src="http://is4wfw.neptuo.com/file.php?rid=55" width="127" height="90" />
+    <img class="image-left" src="http://is4wfw.neptuo.com/file.php?rid=34" width="127" height="90" />
+    <img class="image-left" src="http://is4wfw.neptuo.com/file.php?rid=35" width="127" height="90" />
+    <img class="image-left" src="http://is4wfw.neptuo.com/file.php?rid=34" width="127" height="90" />
+    <img class="image-left" src="http://is4wfw.neptuo.com/file.php?rid=35" width="127" height="90" />
+    <img class="image-left" src="http://is4wfw.neptuo.com/file.php?rid=34" width="127" height="90" />
     <div class="clear"></div>
 </div>
