--- a/trunk/Neptuo.WebSite/Views/Content/Me.cshtml
+++ b/trunk/Neptuo.WebSite/Views/Content/Me.cshtml
@@ -3,9 +3,31 @@
 }
 
 <div class="folder">
+    <img class="image-left" src="~/Content/Images/mnau.jpg" width="127" height="77" alt="Já" />
 
+    <div class="col-md-5 lang-cs">
+        <p class="first">
+            My name is Marek Fišera. I'm from Czech Republic and last few years I spent in Prague. 
+            In summer of 2011 I have completed my Bachelor degree at CTU, Faculty of Electrotechnics, Software Engineering, graded A. 
+            In next school year I started my Master degree at the same university.
+        </p>
+        <p class="first">
+            Since 2007 I'm working as a developer of bussines solutions/web sites for travel agencies, 
+            first two years as XHTML/CSS/Javascript coder and since 2009 as .NET developer.
+        </p>
+    </div>
 
-    My name is Marek Fišera. I'm from Czech Republic, last few years I spent in Prague. In summer of 2011 I completed my Bachelor degree at CTU, Faculty of Electrotechnics, Software Engineering. In next school year I started my Master degree at the same university.
+    <div class="col-md-5 lang-en">
+        <p class="first">
+            My name is Marek Fišera. I'm from Czech Republic and last few years I spent in Prague. 
+            In summer of 2011 I have completed my Bachelor degree at CTU, Faculty of Electrotechnics, Software Engineering, graded A. 
+            In next school year I started my Master degree at the same university.
+        </p>
+        <p class="first">
+            Since 2007 I'm working as a developer of bussines solutions/web sites for travel agencies, 
+            first two years as XHTML/CSS/Javascript coder and since 2009 as .NET developer.
+        </p>
+    </div>
 
-    Since 2007 I'm working as a developer of bussines solutions/web sites for travel agencies, first two years as XHTML/CSS/Javascript coder and since 2009 as .NET developer.
+    <div class="clear"></div>
 </div>
