Home page progress, part2

--- a/Neptuo.WebSite/Views/Content/Home.cshtml
+++ b/Neptuo.WebSite/Views/Content/Home.cshtml
@@ -43,6 +43,23 @@
         <a href="@Url.Action("Webs")" class="lang-cs">Weby, které jsme realizovali</a>
         <a href="@Url.Action("Webs")" class="lang-en right">Webs made by us</a>
     </h2>
+    <div class="col-md-6 lang-cs">
+        <p class="first">
+            Nabízíme realizaci webových stránek ušitých namíru. Pro správu obsahuje využíváme redakční systém, 
+            ve kterém je možné spravovat jak statický obsah, tak dynamicky generovaný obsah. Ať už tento obsah 
+            pochází v článků, galerií nebo formulářů postavených na míru. Ke každému mu tomuto zdroji dat je 
+            navíc možné nastavit opravnění a omezit tak přístup uživatelů jen k určitým částem. 
+            Více o našem redakčním systému pod projektem is4wfw.
+        </p>
+    </div>
+    <div class="col-md-6 lang-en">
+        <p class="first">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc dignissim dui quis sem rutrum, sit amet dapibus urna interdum. 
+            Donec ut gravida sem, sed ullamcorper nunc. Nullam id turpis in risus rutrum condimentum quis nec sem. Nam sollicitudin libero lorem. 
+            Aenean tincidunt tortor in tincidunt semper. Nunc lobortis nisl nisi, et varius erat ultrices nec. 
+            Praesent fermentum odio ac dolor congue, eu ultricies lacus tristique. Nam a lacus id turpis sodales fringilla. 
+        </p>
+    </div>
     @Html.Partial("ShortWebs", Model.Webs)
     <div class="clear"></div>
 </div>
