--- a/trunk/Neptuo.WebSite/Views/Content/Home.cshtml
+++ b/trunk/Neptuo.WebSite/Views/Content/Home.cshtml
@@ -47,7 +47,7 @@
         <p class="first">
             Nabízíme realizaci webových stránek ušitých namíru. Pro správu obsahuje využíváme redakční systém, 
             ve kterém je možné spravovat jak statický obsah, tak dynamicky generovaný obsah. Ať už tento obsah 
-            pochází v článků, galerií nebo formulářů postavených na míru. Ke každému mu tomuto zdroji dat je 
+            pochází v článků, galerií nebo formulářů postavených na míru. Ke každému tomuto zdroji dat je 
             navíc možné nastavit opravnění a omezit tak přístup uživatelů jen k určitým částem. 
             Více o našem redakčním systému pod projektem is4wfw.
         </p>
