--- a/trunk/Neptuo.WebSite/Views/Content/Services.cshtml
+++ b/trunk/Neptuo.WebSite/Views/Content/Services.cshtml
@@ -5,9 +5,9 @@
 
 <div class="intro">
     <div class="intro-content container">
-        <h1>Webs!</h1>
+        <h1>Our services!</h1>
         <p>
-            We have realised some websites. Here they are...
+            We are offering complete coding of desktop+web applications
         </p>
     </div>
 </div>
