--- a/Neptuo.WebSite/Views/Content/Services.cshtml
+++ b/Neptuo.WebSite/Views/Content/Services.cshtml
@@ -32,7 +32,7 @@
 	        }
         </div>
         }
-        <div class="col-md-5 lang-cs">
+        @*<div class="col-md-5 lang-cs">
             <ul>
                 @foreach (var description in web.Descriptions)
                 {
@@ -42,8 +42,8 @@
                     }
                 }
             </ul>
-        </div>
-        <div class="col-md-5 lang-en">
+        </div>*@
+        <div class="col-md-10">
             <ul>
                 @foreach (var description in web.Descriptions)
                 {
@@ -59,8 +59,8 @@
     }
     <div class="folder">
         <h2 class="folder-heading">
-            <span class="lang-cs">A několik starších projektů</span>
-            <span class="lang-en right">And some older projects</span>
+            @*<span class="lang-cs">A několik starších projektů</span>*@
+            <span>And some older projects</span>
         </h2>
     
         @Html.Partial("ShortWebs", Model.Where(w => w.IsOld))
