Preparing 'Projects' page.

--- a/Neptuo.WebSite/Views/Content/Service.cshtml
+++ b/Neptuo.WebSite/Views/Content/Service.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<Neptuo.WebSite.Models.Webs.WebModel>
 @{
-    ViewBag.Title = "Not found!";
+    ViewBag.Title = "Our services!";
 }
 
 <div class="intro">
